# test-1

backend/: .env  pyproject.toml  temp.py
backend/app/: settings.py
backend/app/engine/: FilterFileList.py  __init__.py  constants.py  index.py
backend/config/: tools.yaml
backend/storage/CAH-Q1-FY20-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q1-FY21-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q1-FY22-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q1-FY23-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q1-FY24-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q2-FY20-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q2-FY21-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q2-FY22-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q2-FY23-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q2-FY24-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q3-FY20-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q3-FY21-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/storage/CAH-Q3-FY22-ECT.pdf/: default__vector_store.json  docstore.json  index_store.json
frontend/: .env  (+3 more)
(+154 files in other folders)
